# minforge

./: .gitignore  LICENSE  README.md  note.txt  pyproject.toml  setup.cfg
mindforge-ml/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  test.py
mindforge-ml/mindforge_ml/: utils.py  visualization.py
mindforge-ml/mindforge_ml/datasets/: hypertensiondataset.csv  intentdataset.json  loader.py  seq2seqdataset.json
mindforge-ml/mindforge_ml/supervised/: model.py
mindforge-ml/mindforge_ml/supervised/classifier/: model.py
mindforge-ml/mindforge_ml/unsupervised/: model.py
mindforge-ml/tests/: classifier.py  transformer.py
